--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource-variable/nunito": "^5.1.0",
     "@fontsource-variable/rubik": "^5.1.0",
     "astro": "^4.16.7",
+    "daisyui": "^4.12.14",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3"
   }
