--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/tailwind": "^5.1.2",
     "@fontsource-variable/nunito": "^5.1.0",
     "@fontsource-variable/rubik": "^5.1.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@fontsource/rowdies": "^5.1.0",
     "astro": "^4.16.7",
     "daisyui": "^4.12.14",
     "tailwindcss": "^3.4.14",
