--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/netlify": "^5.5.4",
     "@astrojs/tailwind": "^5.1.2",
     "@fontsource-variable/nunito": "^5.1.0",
     "@fontsource-variable/rubik": "^5.1.0",
