--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/tailwind": "5.1.4",
     "@fontsource-variable/nunito": "^5.1.0",
     "@fontsource-variable/rubik": "^5.1.0",
-    "astro": "^4.16.13",
+    "astro": "5.1.1",
     "daisyui": "^4.12.14",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.6.3"
