--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/solid-js": "^5.0.1",
     "@astrojs/tailwind": "5.1.4",
     "@fontsource-variable/nunito": "^5.1.0",
     "@fontsource-variable/rubik": "^5.1.0",
     "astro": "5.1.1",
     "daisyui": "^4.12.14",
-    "tailwindcss": "^3.4.15",
+    "solid-js": "^1.9.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3"
   }
 }
