--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/solid-js": "^5.0.1",
-    "@astrojs/tailwind": "5.1.4",
+    "@astrojs/solid-js": "5.0.5",
+    "@astrojs/tailwind": "6.0.0",
     "@fontsource-variable/nunito": "^5.1.0",
     "@fontsource-variable/rubik": "^5.1.0",
-    "astro": "5.1.1",
+    "astro": "5.5.2",
     "daisyui": "^4.12.14",
     "solid-js": "^1.9.3",
     "tailwindcss": "^3.4.17",
